--- a/air-temperature-dashboard/src/app/temperature-form/temperature-form.component.html
+++ b/air-temperature-dashboard/src/app/temperature-form/temperature-form.component.html
@@ -1,19 +1,16 @@
-<div class="container">
+<div class="row">
   
-  <form (ngSubmit)="onSubmit()" #temperatureForm="ngForm">
+  <form (ngSubmit)="add()" #temperatureForm="ngForm">
     <div class="form-group">
-      <label for="location">Location</label>
-      <input type="text" class="form-control" id="location" required [(ngModel)]="model.location" name="location">
+      <input type="text" class="form-control" id="location" required [(ngModel)]="model.location" name="location" placeholder="location">
     </div>
 
     <div class="form-group">
-      <label for="date">Date</label>
-      <input type="date" class="form-control" id="date" required [(ngModel)]="model.date" name="date">
+      <input type="date" class="form-control" id="date" required [(ngModel)]="model.date" name="date" placeholder="date">
     </div>
 
     <div class="form-group">
-      <label for="temperature">Temperature</label>
-      <input type="number" class="form-control" id="temperature" required [(ngModel)]="model.temperature" name="temperature">
+      <input type="number" class="form-control" id="temperature" required [(ngModel)]="model.temperature" name="temperature" placeholder="temperature">
     </div>
 
     <button type="submit" class="btn btn-success" [disabled]="!temperatureForm.form.valid">Submit</button>
