--- a/air-temperature-dashboard/src/app/plot/plot.component.html
+++ b/air-temperature-dashboard/src/app/plot/plot.component.html
@@ -1,3 +1,4 @@
 <div *ngIf="chart" class="chart-container">
-  <canvas id="canvas">{{ chart }}</canvas>
+  <!--<canvas id="canvas">{{ chart }}</canvas>-->
+  <chart [type]="chart.type" [data]="chart.data" [options]="chart.options"></chart>
 </div>
